--- a/StudioTahara/new-page.html
+++ b/StudioTahara/new-page.html
@@ -112,7 +112,7 @@ Menu
 <div class="post_column col-lg-6 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_new-page_html_column02">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/oceana2.jpg" /></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/ourSweetHome.jpg" /></span></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
